--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Clarence Taylor</span>
+      <span class="d-block d-lg-none">Gowtham Teja Kanneganti</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
       </span>
@@ -63,26 +63,28 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">Clarence
-          <span class="text-primary">Taylor</span>
+        <h1 class="mb-0">Gowtham Teja
+          <span class="text-primary">Kanneganti</span>
         </h1>
-        <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-          <a href="mailto:name@email.com">name@email.com</a>
+        <div class="subheading mb-5">(405) 413-5255 ·
+          <a href="mailto:gteja0410@gmail">gteja0410@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">I am an enthusiastic and highly motivated professional, eager to learn new technologies and methodologies. With over 2 years of experience in business and academia, I am proficient at understanding and solving business problems from various domains using statistical and machine learning techniques.</p>
         <div class="social-icons">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/gowtham-kanneganti/"target="_blank">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
+          <a href="https://github.com/gt0410"target="_blank">
             <i class="fab fa-github"></i>
           </a>
+          <!--
           <a href="#">
             <i class="fab fa-twitter"></i>
           </a>
           <a href="#">
             <i class="fab fa-facebook-f"></i>
           </a>
+          -->
         </div>
       </div>
     </section>
@@ -95,45 +97,48 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            <h3 class="mb-0">Graduate Research Assistant</h3>
+            <div class="subheading mb-3">University of Oklahoma</div>
+            <p>Developing a SARIMA, LSTM, and CNN-LSTM models on time-series data to predict time travel on roads. This helps transportation department to take decisions on expansion of roads. Research and advice the Oklahoma Department of Transportation of the machine learning techniques that help the transportation department.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary">January 2020 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+            <h3 class="mb-0">Graduate Teaching Assistant</h3>
+            <div class="subheading mb-3">University of Oklahoma</div>
+            <p>Fulfilled the responsibilities of a Teaching Assistant for the courses:<ul style="list-style-type:disc;">
+                              <li>Intelligent Data Analytics (DSA 5103)</li>
+                              <li>Python for non-majors (CS 1213)</li>
+                              </ul> Responsible for designing and grading Assignments, organize labs, and holding office hours.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
+            <span class="text-primary">January 2019 - December 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+            <h3 class="mb-0">Research Assistant</h3>
+            <div class="subheading mb-3">CASS, National Weather Center</div>
+            <p>Developed a software to visualize and predict the flight path using JSON data. Visualize air traffic using HTML and Mapbox. Predicting air traffic helps in operating UAVs in a safe zone. </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
+            <span class="text-primary">September 2018 - January 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+            <h3 class="mb-0">Graduate Engineer Trainee</h3>
+            <div class="subheading mb-3">IFB Industries Ltd</div>
+            <p>Designed tools to manufacture products within 0.006 mm precision. Performed statistical testing and increased the tool life by 20%. Querying data in SQL and preparing monthly manufacturing reports.<p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
+            <span class="text-primary">July 2017 - June 2018</span>
           </div>
         </div>
 
