--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Birla Institute of Technology, Ranchi </h3>
             <div class="subheading mb-3">Bachelor Engineering</div>
+            <div>Mechanical Engineering</div>
             <p>GPA: 3.50</p>
           </div>
           <div class="resume-date text-md-right">
