--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
         <li class="nav-item">
@@ -221,6 +224,70 @@
       </div>
     </section>
 
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="projects">
+      <div class="w-100">
+        <h2 class="mb-5">Projects</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Thesis: Detection of Overshooting Cloud Tops with Convolutional Neural Networks</h3>
+            <a href="https://hdl.handle.net/11244/324409">Link to the project.</a>          
+            <p>Combined satellite images from different channels using interpolation. Developed a CNN model that detects OTs with a recall of ~92%.</p>
+            <b> Technologies: Python, TensorFlow, Keras, Image processing, Imbalanced machine learning, Deep Learning.</b>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Sentiment Analysis on IMDB movie reviews</h3>          
+            <p>Trained model classifies the sentiment of a review with ~93% accuracy. Used word embeddings and trained LSTM and CNN-LSTM architectures. </p>
+            <b> Technologies: Python, Keras, Natural Language Processing (NLP), Deep Learning.</b>
+          </div>
+        </div>
+
+        
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Graduate Teaching Assistant</h3>
+            <div class="subheading mb-3">University of Oklahoma</div>
+            <p>Fulfilled the responsibilities of a Teaching Assistant for the courses:<ul style="list-style-type:disc;">
+                              <li>Intelligent Data Analytics (DSA 5103)</li>
+                              <li>Python for non-majors (CS 1213)</li>
+                              </ul> Responsible for designing and grading Assignments, organize labs, and holding office hours.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">January 2019 - December 2019</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Research Assistant</h3>
+            <div class="subheading mb-3">CASS, National Weather Center</div>
+            <p>Developed a software to visualize and predict the flight path using JSON data. Visualize air traffic using HTML and Mapbox. Predicting air traffic helps in operating UAVs in a safe zone. </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">September 2018 - January 2019</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Graduate Engineer Trainee</h3>
+            <div class="subheading mb-3">IFB Industries Ltd</div>
+            <p>Designed tools to manufacture products within 0.006 mm precision. Performed statistical testing and increased the tool life by 20%. Querying data in SQL and preparing monthly manufacturing reports.<p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">July 2017 - June 2018</span>
+          </div>
+        </div>
+
+      </div>
+
+    </section>
+    
     <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
