--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+          <a class="nav-link js-scroll-trigger" href="#certifications">Certifications</a>
         </li>
       </ul>
     </div>
@@ -243,46 +243,38 @@
           <div class="resume-content">
             <h3 class="mb-0">Sentiment Analysis on IMDB movie reviews</h3>          
             <p>Trained model classifies the sentiment of a review with ~93% accuracy. Used word embeddings and trained LSTM and CNN-LSTM architectures. </p>
-            <b> Technologies: Python, Keras, Natural Language Processing (NLP), Deep Learning.</b>
+            <b> Technologies: Python, Keras, Natural Language Processing (NLP), Deep Learning, AWS.</b>
           </div>
         </div>
 
         
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Graduate Teaching Assistant</h3>
-            <div class="subheading mb-3">University of Oklahoma</div>
-            <p>Fulfilled the responsibilities of a Teaching Assistant for the courses:<ul style="list-style-type:disc;">
-                              <li>Intelligent Data Analytics (DSA 5103)</li>
-                              <li>Python for non-majors (CS 1213)</li>
-                              </ul> Responsible for designing and grading Assignments, organize labs, and holding office hours.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">January 2019 - December 2019</span>
+            <h3 class="mb-0">TMDB Box Office Prediction</h3>
+            <a href="https://github.com/gt0410/TMDB-Data-kaggle">Link to the project.</a>          
+            <p>Predicted box office revenue of movies with a RMSE of #0.2069. Performed EDA, Feature Engineering, and Gradient Boosting Machine (GBM) model performed best.</p>
+            <b> Technologies: R, Machine learning.</b>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Research Assistant</h3>
-            <div class="subheading mb-3">CASS, National Weather Center</div>
-            <p>Developed a software to visualize and predict the flight path using JSON data. Visualize air traffic using HTML and Mapbox. Predicting air traffic helps in operating UAVs in a safe zone. </p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">September 2018 - January 2019</span>
+            <h3 class="mb-0">DS for good &mdash; City of LA</h3>
+            <a href="https://www.kaggle.com/gowthamteja/exploring-job-bulletins">Link to the project.</a>          
+            <p>Converted plain-text job postings into a CSV file to improve the quality and diversity of applicant pool. Extracted data using Regex, Text Mining, Visualization, lemmatization, TFidf Vectorizer, and word2vec is used to recommend Employment.</p>
+            <b> Technologies: Python, Text analytics, Regex, Machine learning.</b>
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Graduate Engineer Trainee</h3>
-            <div class="subheading mb-3">IFB Industries Ltd</div>
-            <p>Designed tools to manufacture products within 0.006 mm precision. Performed statistical testing and increased the tool life by 20%. Querying data in SQL and preparing monthly manufacturing reports.<p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">July 2017 - June 2018</span>
+            <h3 class="mb-0">Redactor / Unredactor Text Analytics</h3>
+            <a href="https://github.com/gt0410/Redactor">Link to the project.</a>          
+            <p>Redacted sensitive information in files using Regex and nltk package. Developed a Random Forest Classifier to identify redacted words. </p>
+            <b> Technologies: Python, Text analytics, Machine learning.</b>
           </div>
         </div>
+
 
       </div>
 
@@ -300,9 +292,9 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="certifications">
       <div class="w-100">
-        <h2 class="mb-5">Awards &amp; Certifications</h2>
+        <h2 class="mb-5">Certifications</h2>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
