--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Thesis: Detection of Overshooting Cloud Tops with Convolutional Neural Networks</h3>
-            <a href="https://hdl.handle.net/11244/324409">Link to the project.</a>          
+            <a href="https://hdl.handle.net/11244/324409"target="_blank">Link to the project.</a>          
             <p>Combined satellite images from different channels using interpolation. Developed a CNN model that detects OTs with a recall of ~92%.</p>
             <b> Technologies: Python, TensorFlow, Keras, Image processing, Imbalanced machine learning, Deep Learning.</b>
           </div>
