--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">TMDB Box Office Prediction</h3>
-            <a href="https://github.com/gt0410/TMDB-Data-kaggle">Link to the project.</a>          
+            <a href="https://github.com/gt0410/TMDB-Data-kaggle" target="_blank">Link to the project.</a>          
             <p>Predicted box office revenue of movies with a RMSE of #0.2069. Performed EDA, Feature Engineering, and Gradient Boosting Machine (GBM) model performed best.</p>
             <b> Technologies: R, Machine learning.</b>
           </div>
@@ -273,7 +273,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Redactor / Unredactor Text Analytics</h3>
-            <a href="https://github.com/gt0410/Redactor">Link to the project.</a>          
+            <a href="https://github.com/gt0410/Redactor" target="_blank">Link to the project.</a>          
             <p>Redacted sensitive information in files using Regex and nltk package. Developed a Random Forest Classifier to identify redacted words. </p>
             <b> Technologies: Python, Text analytics, Machine learning.</b>
           </div>
