--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Graduate Engineer Trainee</h3>
+            <h3 class="mb-0">Graduate Engineer</h3>
             <div class="subheading mb-3">IFB Industries Ltd</div>
-            <p>Designed tools to manufacture products within 0.006 mm precision. Performed statistical testing and increased the tool life by 20%. Querying data in SQL and preparing monthly manufacturing reports.<p>
+            <p>Increased the tool life by 20% using statistical hypothesis testing. Presentation of monthly manufacturing reports using data from the SQL database to communicate technical information. Responsible for collecting, analyzing, interpreting, and summarizing data in preparation for the generation of statistical and analytical reports. Forecasting product sales. Designed tools to manufacture products within 0.006 mm precision.<p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">July 2017 - June 2018</span>
