--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Research Informatics Analyst</h3>
-            <div class="subheading mb-3">Center for Public Partnerships and Research, Univ of Kansas</div>
+            <div class="subheading mb-3">Center for Public Partnerships & Research, University of Kansas</div>
             <p>Design and develop dashboards and data pipelines to provide insights. Design and publish Tableau dashboards on server. Maintain the data security on Tableau server. Perform analysis on datasources extracted from PostgreSQL. Write scripts in R and Python to perform technical tasks.</p>
           </div>
           <div class="resume-date text-md-right">
